Bug 210096, part two - remove inIFileSearch interface and its implementation patch by Shawn Wilsher <comrade693+bmo@gmail.com> r=db48x, sr=neil