extensions/inspector/resources/content/search/inSearchUtils.js
@@ -45,7 +45,6 @@
 //////////// global variables /////////////////////
 
 var kSearchLookup = {
-  file: "inIFileSearch", 
   cssvalue: "inICSSValueSearch"
 };
 
